cmake_minimum_required(VERSION 3.13)
project(VoxelEngine)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_SUPPRESS_REGENERATION true)

 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Binaries)
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Source)

add_subdirectory(Source)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT VoxelEngine)