# Copyright Snaps 2022, All Rights Reserved.

############################################################################################################
# MODULES SETUP
############################################################################################################

# Add module subdirectories
add_subdirectory(CoreEngine)